[package]
name = "bevy-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
transform-gizmo-bevy.workspace = true

bevy.workspace = true
bevy_infinite_grid = "0.18"
bevy_mod_outline = { git = "https://github.com/komadori/bevy_mod_outline.git", rev = "refs/pull/72/head" }

[dependencies.bevy_egui]
version = "0.39"
features = ["open_url", "default_fonts", "render"]
default-features = false

[lints]
workspace = true
